DE Translation correction for completing a building cleanup

--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -3235,7 +3235,7 @@
       </notes>
       <segment>
         <source>%citizen% hat diese Ruine freigelegt. Es handelt sich um %type%. Hurra!</source>
-        <target>%citizen% hat diese Ruine freigelegt. Es handelt sich um %type%. Hurra!</target>
+        <target>Diese Zone wurde komplett gesäubert und freigeschaufelt, dabei wurde folgendes Gebäude entdeckt: %type%.</target>
       </segment>
     </unit>
     <unit id="zTh0a4e" name="a30f81a">
