EN Translation fix on reparation tooltip

--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -9205,7 +9205,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Jeder %divap%, der in die Reparatur investiert wird, beseitigt %hprepair% Schadenspunkte an einem Bauwerk.</source>
-        <target>Each 1 %divap% invested in reparation will repare %hprepair% damage points on this construction.</target>
+        <target>Each 1 %divap% invested in repairs will fix %hprepair% damage points.</target>
       </segment>
     </unit>
     <unit id="8atbEzY" name="Die Reparatur verbraucht keine Ressourcen.">
@@ -9214,7 +9214,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Die Reparatur verbraucht keine Ressourcen.</source>
-        <target>Reparations doesn't consume ressources.</target>
+        <target>Repairs don't consume resources.</target>
       </segment>
     </unit>
     <unit id="BjwWH4y" name="Erhaltene Nachrichten">
