--- a/translations/soul.en.xlf
+++ b/translations/soul.en.xlf
@@ -2137,7 +2137,7 @@
       </notes>
       <segment>
         <source>&lt;b&gt;%u1%&lt;/b&gt; hat &lt;b&gt;%u2%&lt;/b&gt; in die Koalition eingeladen.</source>
-        <target><![CDATA[<b>%u1%</b> hat <b>%u2%</b> in die Koalition eingeladen.]]></target>
+        <target><![CDATA[<b>%u1%</b> has invited <b>%u2%</b> to join us.]]></target>
       </segment>
     </unit>
     <unit id="bvTtAAO" name="&lt;b&gt;%u1%&lt;/b&gt; ist der Koalition soeben beigetreten!">
