--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -2176,7 +2176,7 @@
       </notes>
       <segment>
         <source>Bürger nach Sprache</source>
-        <target>Bürger nach Sprache</target>
+        <target>Citizens per town</target>
       </segment>
     </unit>
     <unit id="gvDyCm1" name="Geöffnet">
@@ -2392,7 +2392,7 @@
       </notes>
       <segment>
         <source>Existierende Beschränkungen</source>
-        <target>Existierende Beschränkungen</target>
+        <target>Existing sanctions/target>
       </segment>
     </unit>
     <unit id="d.ixmWC" name="Dieser Spieler hat eine weiße Weste.">
@@ -2401,7 +2401,7 @@
       </notes>
       <segment>
         <source>Dieser Spieler hat eine weiße Weste.</source>
-        <target>Dieser Spieler hat eine weiße Weste.</target>
+        <target>This player doesn't have any existing sanctions.</target>
       </segment>
     </unit>
     <unit id="FwMioy8" name="Info">
@@ -2473,7 +2473,7 @@
       </notes>
       <segment>
         <source>Interner Vermerk</source>
-        <target>Interner Vermerk</target>
+        <target>Internal note</target>
       </segment>
     </unit>
     <unit id="dd81ecc" name="Art">
@@ -2554,7 +2554,7 @@
       </notes>
       <segment>
         <source>%d% Tage</source>
-        <target>%d% Tage</target>
+        <target>%d% Day(s)</target>
       </segment>
     </unit>
     <unit id="R9HFTdn" name="Neue Beschränkung hinzufügen">
@@ -2563,7 +2563,7 @@
       </notes>
       <segment>
         <source>Neue Beschränkung hinzufügen</source>
-        <target>Neue Beschränkung hinzufügen</target>
+        <target>Add a sanction</target>
       </segment>
     </unit>
     <unit id="o.gLHi8" name="24 Stunden">
@@ -2572,7 +2572,7 @@
       </notes>
       <segment>
         <source>24 Stunden</source>
-        <target>24 Stunden</target>
+        <target>24 Hours</target>
       </segment>
     </unit>
     <unit id="YvnlIm5" name="Bestätigung erforderlich">
@@ -2590,7 +2590,7 @@
       </notes>
       <segment>
         <source>1 Jahr</source>
-        <target>1 Jahr</target>
+        <target>1 Year</target>
       </segment>
     </unit>
     <unit id="vFTx03L" name="Admin-Bestätigung erforderlich">
@@ -2608,7 +2608,7 @@
       </notes>
       <segment>
         <source>2 Jahre</source>
-        <target>2 Jahre</target>
+        <target>2 Years</target>
       </segment>
     </unit>
     <unit id="NhpWriw" name="Dauerhaft">
@@ -2617,7 +2617,7 @@
       </notes>
       <segment>
         <source>Dauerhaft</source>
-        <target>Dauerhaft</target>
+        <target>Permanent</target>
       </segment>
     </unit>
     <unit id="VBYHRyg" name="Art der Beschränkung">
@@ -2626,7 +2626,7 @@
       </notes>
       <segment>
         <source>Art der Beschränkung</source>
-        <target>Art der Beschränkung</target>
+        <target>Restriction type</target>
       </segment>
     </unit>
     <unit id="t5PuA4i" name="Soziale Interaktion verbieten">
@@ -2635,7 +2635,7 @@
       </notes>
       <segment>
         <source>Soziale Interaktion verbieten</source>
-        <target>Soziale Interaktion verbieten</target>
+        <target>Prevent social interactions</target>
       </segment>
     </unit>
     <unit id="N35nJiR" name="Posten in Foren verbieten">
@@ -2644,7 +2644,7 @@
       </notes>
       <segment>
         <source>Posten in Foren verbieten</source>
-        <target>Posten in Foren verbieten</target>
+        <target>Post on forums</target>
       </segment>
     </unit>
     <unit id="S.Z0svV" name="Stadt-interne Kommunikation verbieten">
@@ -2653,7 +2653,7 @@
       </notes>
       <segment>
         <source>Stadt-interne Kommunikation verbieten</source>
-        <target>Stadt-interne Kommunikation verbieten</target>
+        <target>Communicate in towns</target>
       </segment>
     </unit>
     <unit id="TofCy.V" name="Stadtübergreifende Kommunikation verbieten">
@@ -2662,7 +2662,7 @@
       </notes>
       <segment>
         <source>Stadtübergreifende Kommunikation verbieten</source>
-        <target>Stadtübergreifende Kommunikation verbieten</target>
+        <target>Communicate outside of towns</target>
       </segment>
     </unit>
     <unit id="4Ih2_KV" name="Kommentare verbieten">
@@ -2671,7 +2671,7 @@
       </notes>
       <segment>
         <source>Kommentare verbieten</source>
-        <target>Kommentare verbieten</target>
+        <target>Comments on towns</target>
       </segment>
     </unit>
     <unit id="Hk8oxc5" name="Organisation in Gruppen verbieten">
@@ -2680,7 +2680,7 @@
       </notes>
       <segment>
         <source>Organisation in Gruppen verbieten</source>
-        <target>Organisation in Gruppen verbieten</target>
+        <target>Coalition organization</target>
       </segment>
     </unit>
     <unit id="IdwEk1H" name="Spielen verbieten">
@@ -2689,7 +2689,7 @@
       </notes>
       <segment>
         <source>Spielen verbieten</source>
-        <target>Spielen verbieten</target>
+        <target>Interdiction of playing</target>
       </segment>
     </unit>
     <unit id="67OtxCl" name="3e3c02a">
