--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -2392,7 +2392,7 @@
       </notes>
       <segment>
         <source>Existierende Beschränkungen</source>
-        <target>Existing sanctions/target>
+        <target>Existing sanctions</target>
       </segment>
     </unit>
     <unit id="d.ixmWC" name="Dieser Spieler hat eine weiße Weste.">
