--- a/translations/ghost.de.xlf
+++ b/translations/ghost.de.xlf
@@ -1378,5 +1378,23 @@
         <target>Für diese Stadt gilt eine Platzreservierung.</target>
       </segment>
     </unit>
+    <unit id="WhL1uY." name="Einer Stadt beitreten">
+      <notes>
+        <note category="german">Einer Stadt beitreten</note>
+      </notes>
+      <segment>
+        <source>Einer Stadt beitreten</source>
+        <target>Einer Stadt beitreten</target>
+      </segment>
+    </unit>
+    <unit id="tnT0nBQ" name="Wähle dein nächstes Leben:">
+      <notes>
+        <note category="german">Wähle dein nächstes Leben:</note>
+      </notes>
+      <segment>
+        <source>Wähle dein nächstes Leben:</source>
+        <target>Wähle dein nächstes Leben:</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
