city select screen

--- a/translations/ghost.fr.xlf
+++ b/translations/ghost.fr.xlf
@@ -1377,7 +1377,7 @@
       </notes>
       <segment>
         <source>Wähle dein nächstes Leben:</source>
-        <target>Wähle dein nächstes Leben:</target>
+        <target>Choisissez votre prochaine existence :</target>
       </segment>
     </unit>
   </file>
