Corrected 1 french title

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -13513,7 +13513,7 @@
       </notes>
       <segment>
         <source>Die Macht der Proteine</source>
-        <target>Le plein de Protéines."</target>
+        <target>Le plein de Protéines.</target>
       </segment>
     </unit>
     <unit id="WE9IWrB" name="Zombieliebling">
